KUBE/INGRESS-APPLICATION/nginx-golang-mysql/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: app-2
spec:
  ingressClassName: haproxy

  rules:
    - host: app2.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-frontend
                port:
                  number: 80
